--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "zod": "^3.24.4"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
